MODDICORE-492: 2nd iteration