@@ -8,9 +8,9 @@ import org.folio.AcquisitionsUnit;
 import org.folio.DataImportEventPayload;
 import org.folio.rest.jaxrs.model.ElectronicAccessRelationship;
 import org.folio.rest.jaxrs.model.HoldingsRecord;
-import org.folio.ItemNoteType;
+import org.folio.rest.jaxrs.model.ItemNoteType;
 import org.folio.rest.jaxrs.model.Location;
-import org.folio.NatureOfContentTerm;
+import org.folio.rest.jaxrs.model.NatureOfContentTerm;
 import org.folio.Organization;
 import org.folio.ParsedRecord;
 import org.folio.Record;
@@ -1952,7 +1952,7 @@ public class MarcRecordReaderUnitTest {
     assertEquals(ValueType.LIST, value.getType());
     assertEquals(EXTEND_EXISTING, ((ListValue) value).getRepeatableFieldAction());
     assertFalse(((ListValue) value).getValue().isEmpty());
-    assertEquals("00001 Vendor order number", ((ListValue) value).getValue().get(0));
+    assertEquals("00001 Vendor order number", ((ListValue) value).getValue().getFirst());
   }
 
   @Test
